# AnnotateX

./: README.md
backend/: .gitignore  .mockery.yml  Makefile  alembic.ini  go.mod  go.sum  main.go  pyproject.toml
backend/alembic/: env.py
backend/api/: auth.go  datasets.go  organizations.go  projects.go  user.go  users.go
backend/bootstrap/: cors.go  superadmin.go
backend/cache/: cache.go  redis.go
backend/config/: config.go
backend/db/: db.go
backend/errors/: errors.go
backend/httperr/: errors.go
backend/logger/: logger.go
backend/middleware/: error_handler.go  inject_user_header.go
backend/model/: filter.go  project.go  (+3 more)
dev/: Dockerfile  Makefile  docker-compose-backend.yaml  docker-compose-dev.yaml  docker-compose.yml
frontend/: eslint.config.js  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts
server/: pyproject.toml
server/alembic/versions/: 64fdf465262a_init_database.py
server/src/annotatex/: __init__.py  config.py
server/src/annotatex/db/: engine.py
server/src/annotatex/models/: __init__.py  project.py  user.py
server/src/annotatex/repositories/: organization_repository.py  user_auth.py  user_portfolio_repository.py  users_repository.py
server/src/annotatex/routers/: organization.py
server/tests/: conftest.py  test_organization.py  test_user.py  test_user_auth.py
services/dataset_worker/: go.mod  go.sum  main.go  pyproject.toml
services/dataset_worker/config/: config.go
services/dataset_worker/dataset_worker/: __main__.py  config.py
services/dataset_worker/models/: models.go
(+107 files in other folders)
