[project]
name = "annotatex"
version = "0.1.0"
description = "Free to label"
readme = "README.md"
authors = [{ name = "Fledge Shiu", email = "xzk0701@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]==0.116.1",
    "psycopg[binary]==3.2.9",
    "sqlalchemy==2.0.43",
    "alembic==1.16.5",
    "python-dotenv==1.1.1",
    "returns==0.26.0",
    "greenlet==3.2.4",
]

[tool.uv.sources]
annotatex = { workspace = true }

[tool.uv.workspace]
members = ["."]

[project.scripts]
annotatex = "annotatex:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite==0.21.0",
    "annotatex",
    "pyright==1.1.404",
    "pytest==8.4.2",
    "pytest-asyncio==1.1.0",
]

[tool.pyright]
venvPath = '.'
venv = ".venv"
exclude = ['.venv']


[tool.pytest.ini_options]
asyncio_mode = "auto"
